# CS467-Rust-Humidity-Sensor

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
Data Processing Prototyping/: main.ipynb  pyproject.toml  raw_humidity.csv
src/: main.rs
