[package]
name = "Humidity-Sensor"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
# Using panic halt to fully stop on panic
panic-halt = { version = "1.0.0" }

#Embassy for HAL and scheduling
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt"
    ] }

embassy-time = { version = "0.5.0" }

embassy-rp = { version = "0.9.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040"] }

# Processor support
cortex-m = { version = "0.7.6", features = [
    "inline-asm"
    ] }

cortex-m-rt = "0.7.0"
