[package]
name = "Humidity-Sensor"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = "0.5.0"
embassy-rp = { version = "0.9.0", features = [
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0"
hd44780-driver = "0.4.0"
heapless = "0.8"
